--- a/angular.json
+++ b/angular.json
@@ -58,6 +58,14 @@
               ],
               "serviceWorker": true,
               "ngswConfigPath": "ngsw-config.json"
+            }, 
+            "vi": {
+              "aot": true,
+              "outputPath": "dist/ngrx-learning-app-vi/",
+              "i18nFile": "src/locale/messages.vi.xlf",
+              "i18nFormat": "xlf",
+              "i18nLocale": "vi",
+              "i18nMissingTranslation": "error"
             }
           }
         },
@@ -69,6 +77,9 @@
           "configurations": {
             "production": {
               "browserTarget": "ngrx-learning-app:build:production"
+            },
+            "vi": {
+              "browserTarget": "ngrx-learning-app:build:vi"
             }
           }
         },
